<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:textSize="36sp"/>

    <ImageView
        android:id="@+id/iv_icon"
        android:src="@drawable/medical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_diagnose"
        app:cardCornerRadius="8dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:elevation="2dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/stetoskop"
                android:layout_weight="1"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <TextView
                android:layout_weight="1"
                android:padding="8dp"
                android:layout_gravity="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:text="@string/diagnose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_information"
        app:cardCornerRadius="8dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_diagnose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:elevation="2dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/medical_information"
                android:layout_weight="1"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <TextView
                android:layout_weight="1"
                android:padding="8dp"
                android:layout_gravity="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:text="@string/information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>